# wasm-deno-template

./: .gitignore  README.md  app.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
