[package]
name = "wasm"
version = "0.1.0"
authors = ["Nishant Joshi <nishantjo.12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
# This are the library file that would be generated after the compilation
# cdylib: For windows .dll files
# rlib: Is the basic rust library


[dependencies]
wasm-bindgen = "*"

# `wee_alloc` is a allocator for wasm files that is small as compared to the default allocator
wee_alloc = { version = "*", optional = true }

[profile.release]
# Optimization of the output code (machine code)
opt-level = "s"